legacy: fix dark mode not working on light devices

--- a/src/legacy/assets/scss/base/_color-scheme.scss
+++ b/src/legacy/assets/scss/base/_color-scheme.scss
@@ -46,7 +46,7 @@
   @include color-scheme-light;
 }
 @media (prefers-color-scheme: light) {
-  .fcc-composer.fcc-composer {
+  .fcc-composer {
     @include color-scheme-light;
     .fcc--invert-on-dark {
       filter: none;
